--- a/src/components/Quiz.module.css
+++ b/src/components/Quiz.module.css
@@ -1,6 +1,7 @@
 .indicators {
     display: flex;
     gap: 20px;
+    justify-content: center;
 }
 .ul {
     list-style: none;
@@ -17,4 +18,12 @@
 }
 .h3 {
     color: #646cff;
+    display: flex;
+    justify-content: center;
 }
+
+.separator {
+    border-bottom: 2px solid #646cff; /* Устанавливаем стиль, цвет и толщину полоски */
+    margin-bottom: 20px; /* Добавляем немного отступа снизу, чтобы разделитель не прижимался к следующему элементу */
+}
+
